--- a/index.html
+++ b/index.html
@@ -13,29 +13,65 @@
       <img src="https://p9-flow-imagex-sign.byteimg.com/tos-cn-i-a9rns2rl98/rc/pc/super_tool/89f6c3e198e74f92bd9a6f91d160c095~tplv-a9rns2rl98-image.image?rcl=20251119153032BAB44547C5AFCF1EC8F0&rk3s=8e244e95&rrcfp=f06b921b&x-expires=1766129500&x-signature=em6nJXfzyAYbgJflDuswwDqjIyk%3D" alt="酒馆日记本">
     </div>
     <h2 class="text-center">酒馆日记本</h2>
-    <form id="loginForm" class="login-form">
-      <div class="form-group">
-        <label for="username" class="form-label">用户名</label>
-        <input type="text" id="username" class="form-control" placeholder="请输入用户名" required>
-      </div>
-      <div class="form-group">
-        <label for="password" class="form-label">密码</label>
-        <input type="password" id="password" class="form-control" placeholder="请输入密码" required>
-      </div>
-      <div class="form-group form-check">
-        <input type="checkbox" id="rememberPassword" class="form-check-input">
-        <label for="rememberPassword" class="form-check-label">记住密码</label>
-      </div>
-      <div class="form-group">
-        <button type="submit" class="btn btn-primary btn-block">登录</button>
-      </div>
-    </form>
-    <div class="text-center mt-3">
-      <p>测试账号: admin / 密码: admin</p>
-      <p>测试账号: user / 密码: user</p>
+    
+    <!-- 系统账号登录表单 -->
+    <div class="mt-4">
+      <form id="localLoginForm">
+        <div class="form-group">
+          <label for="username">用户名</label>
+          <input type="text" class="form-control" id="username" placeholder="请输入用户名" required>
+        </div>
+        <div class="form-group">
+          <label for="password">密码</label>
+          <div class="input-group">
+            <input type="password" class="form-control" id="password" placeholder="请输入密码" required>
+            <div class="input-group-append">
+              <button class="btn btn-outline-secondary" type="button" id="togglePassword">
+                <i class="fas fa-eye"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="form-check mt-2">
+          <input type="checkbox" class="form-check-input" id="rememberMe">
+          <label class="form-check-label" for="rememberMe">记住我</label>
+        </div>
+        <button type="submit" class="btn btn-primary btn-block mt-3">
+          <i class="fas fa-sign-in-alt"></i> 登录
+        </button>
+      </form>
+    </div>
+    
+    <div class="text-center mt-4">
+      <p>或使用GitHub账号登录</p>
+      <button id="githubLogin" class="btn btn-secondary btn-block">
+        <i class="fab fa-github"></i> 使用GitHub登录
+      </button>
     </div>
   </div>
 
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+  
+  <script>
+    // Firebase配置（请替换为您自己的项目配置）
+    const firebaseConfig = {
+      apiKey: "YOUR_API_KEY",
+      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
+      projectId: "YOUR_PROJECT_ID",
+      storageBucket: "YOUR_PROJECT_ID.appspot.com",
+      messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
+      appId: "YOUR_APP_ID"
+    };
+
+    // 初始化Firebase
+    firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+    const db = firebase.firestore();
+  </script>
+  
   <script src="js/auth.js"></script>
 </body>
 </html>
