--- a/user-management.html
+++ b/user-management.html
@@ -104,7 +104,14 @@
           </div>
           <div class="form-group">
             <label for="password" class="form-label">密码 <span class="text-danger" id="passwordRequired">*</span></label>
-            <input type="password" id="password" class="form-control">
+            <div class="input-group">
+              <input type="password" id="password" class="form-control">
+              <div class="input-group-append">
+                <button class="btn btn-outline-secondary" type="button" id="toggleModalPassword">
+                  <i class="fas fa-eye"></i>
+                </button>
+              </div>
+            </div>
             <small id="passwordHint" class="form-text text-muted">密码长度至少6位</small>
           </div>
           <div class="form-group">
